deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: my-ingress-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-nginx-controller
  template:
    metadata:
      labels:
        app: ingress-nginx-controller
    spec:
      containers:
        - name: nginx-ingress-container
          image: filekrafter95/springboot-k8s-ingress-nginx-controller:v1.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
