service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-service
  namespace: my-ingress-namespace
spec:
  selector:
    app: ingress-nginx-controller
  ports:
    - port: 80 # keeping service port as 80
      targetPort: 8080
